# dbus-scripts

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  dbus-run-scripts  dbus-scripts-example  dbus-scripts.in
debian/: README.Debian  autogen.sh  changelog  conffiles  control  copyright  dbus-scripts.default  dbus-scripts.init  dbus-scripts.postinst  dirs  rules
src/: Makefile.am  Makefile.in  dbus-scripts.c
